# Opencv_FaceCheck

./: CMakeLists.txt  README.md  main.cpp
